# BingoMaker

./: .gitignore  Makefile  README.md  api-template.yaml  api.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yaml  test.yaml
Database/: CreateDynamo.py  ScanDynamo.py
DatabaseUp/: database.py
Databases/: CreateDynamoDatabase.py  CreateMangoDatabase.py  ScanDatabase.py  ScanDynamoDatabase.py  ScanMangoDatabase.py
bingomaker/: nouns
bingomaker/app/: __init__.py  app.py  config.py  image_routes.py  tilepool_routes.py
bingomaker/app/static/: styles.css
bingomaker/app/templates/: tilessets.html
bingomaker/data/: __init__.py  dynamodb.py  file.py  memory.py  persistence.py  serialization.py
bingomaker/game/: __init__.py
bingomaker/image_process/: __init__.py  processImage.py
bingomaker/images/: __init__.py  local.py  memory.py  s3.py
deploy/: .gitignore  amplify.tf  api_gateway.tf  cognito.tf  dynamo.tf  ec2.sh  ec2.tf  lambda.tf  main.tf  s3.tf  secretsmanager.tf  security-group.sh  userdata.sh  variables.tf
lambdas/: delete_tilepool.py  get_tilepool.py  get_tilepools.py  new_bingocard.py  new_tilepool.py  update_tilepool.py
layers/helper_layer/python/: lambda_helper.py
presentation/: presentation.html  presentation.md
scripts/: lambda_zipper.py  push_layer.py
src/: __init__.py  app.py  disk_reader.py  game.py  index.html  serialization.py
src/Databases/: CreateMangoDatabase.py
src/app/: __init__.py  app.py  config.py  image_routes.py  images.py  tilepool_routes.py  tilepools.py
src/app/static/: script.js
src/app/templates/: index.html
src/data/: __init__.py  disk_reader.py  dynamodb.py  file.py  memory.py  mongo.py  persistence.py  serialization.py
src/game/: __init__.py  game.py
src/image_process/: __init__.py
src/images/: __init__.py  dynamo_counts.py  image_manager.py  local.py  memory.py
static/: game.js  index.html  script.js  styles.css  tilesets.html  variables.js
tests/: examples.py  test_app.py  test_database.py  test_game.py  test_image_process.py  test_images.py  test_serialization.py
