[project]
name = "bingomaker"
version = "0.1.0"
description = "A multiplayer bingo game maker"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.35.50",
    "flask>=3.0.3",
    "gunicorn>=23.0.0",
    "setproctitle>=1.3.3",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "ruff>=0.7.1",
]

[tool.pytest.ini_options]
pythonpath = [ ".", "src"]
testpaths = [
    "tests"
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.format]
quote-style = "double"
